# simpletex

./: .gitignore  CMakeLists.txt  test_fountain.cc
include/: camera.h  common.h  image.h  log.h  mesh.h  pose.h  vertex_colorizer.h  view_patch_generator.h  visibility_tester.h
src/: camera.cc  image.cc  log.cc  mesh.cc  pose.cc  timer.h  vertex_colorizer.cc  view_patch_generator.cc  visibility_tester.cc
